[package]
name = "rust-frame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.1", features = ["full"] }
actix-web = "3.3.2"
actix-rt = "2.4.0"
serde = "1.0.130"
serde_json = "1.0.70"
once_cell = "1.8.0"
futures = "0.3.17"
redis = "0.21.0"
async-trait = "0.1.51"
sentry = "0.23.0"
sentry-actix = "0.23.0"
mini-redis = "0.4.1"
tracing = "0.1.28"
tracing-subscriber = "0.3.1"
tracing-futures = "0.2.5"
actix-web-prom = "0.5.1"
prometheus = { version = "0.13.0", features = ["process"] }
nanoid = "0.4.0"